Fixing sidebar issue that makes jQueryUI.com not make full-width on mobile devices.

--- a/themes/jqueryui.com/style.css
+++ b/themes/jqueryui.com/style.css
@@ -147,3 +147,11 @@ a,
 		overflow: auto;
 	}
 }
+
+@media only screen and (max-width: 480px) {
+	#content .dev-links {
+		width: 55%;
+		margin: -15px -29px .5em 1em;
+		overflow: hidden;
+	}
+}
